# amazon-kinesis-video-streams-webrtc-sdk-c

./: .SignalingCache_v0  kvsFileLogFilter.0  kvsFileLogFilter.1  kvsFileLogFilter.2  kvsFileLogFilter.3
devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/my_webrtc/: kvsWebrtcClientViewer
devel/lib/pkgconfig/: my_webrtc.pc
devel/share/my_webrtc/cmake/: my_webrtcConfig.cmake
src/my_webrtc/: CMakeLists.txt
src/my_webrtc/open-source/include/: lws_config.h
src/my_webrtc/open-source/include/com/amazonaws/kinesis/video/common/: CommonDefs.h
src/my_webrtc/open-source/lib/: libcrypto.so.1.1  libwebsockets.so.18
src/my_webrtc/open-source/lib/cmake/libwebsockets/: LibwebsocketsTargets-noconfig.cmake  LibwebsocketsTargets.cmake  libwebsockets-config-version.cmake  libwebsockets-config.cmake
src/my_webrtc/open-source/lib/pkgconfig/: libcrypto.pc  libkvsCommonLws.pc  libkvspic.pc  libkvspicClient.pc  libkvspicState.pc  libkvspicUtils.pc  libsrtp2.pc  libssl.pc  libwebsockets.pc  libwebsockets_static.pc  openssl.pc  usrsctp.pc
src/my_webrtc/src/: Common.cpp  kvsWebRTCClientViewer.cpp
